log/build_2024-11-12_21-36-48/drone_delivery/stderr.log
  File "/home/loris/Documents/Projects/ROS2/drone_delivery/install/drone_delivery/lib/python3.12/site-packages/drone_delivery/drone_control.py", line 181
    pitch_input = 30 * clamp(intComVal[1], -1, 1) + gyroVal[1] max(-distance, -0.5)
                                                               ^^^
SyntaxError: invalid syntax

